﻿PKHeX - By Kaphotics
http://projectpokemon.org/pkhex/

23/09/25 - New Update:
 - Added support for more Scarlet & Violet 2.0.1 save file sizes.
 - Legality: Added more Kitakami encounters (sub-zones) and basic weather mark recognition.
 - Fixed: Encounter template recognition regressions resolved (Gen4 Pokewalker, Gen9 static encounter scale).
 - Fixed: Gen9 S/V Pokédex for 2.0.1+ save files now references a new save file block & GUI editor.
 - Added: Gen9 TM/Fly cheats now check for if a flag exists for pre-2.0.1 save files.
 - Added: Gen9 Fashion unlock cheat now adds 2.0.1+ fashion if available.

23/09/16 - New Update: (112092) [7479688]
 - Added support for Scarlet & Violet 2.0.1 (Teal Mask)
 - Legality: Added encounters / changes as per Teal Mask DLC adjustments. 
 - - May still have issues with crossovers / hidden ability permissions.
 - - Changed: Evolve-Knowing-Move criteria has been rewritten for better side-game checks & accuracy.
 - - Changed: More encounter generator fixes implemented (missed a few properties).
 - Fixed: Gen9 Pokédex clearing individual entries now only wipes the entry instead of everything that follows. Thanks @Alexander3a !
 - Fixed: Gen5 CGear Skin importing now gives the correct error message when too many unique tiles are imported.

23/08/23 - New Update: (160296) [7367596]
 - Legality: Added realtime RNG correlation checks for most SW/SH raids. Thanks @SciresM & @Lusamine !
 - - Note: Seed details do not trickle out to the verbose legality report at this time since seeds are 64bit (not 32bit).
 - - Added: The encounter generator / matching API has been refactored for better performance and maintenance.
 - - Fixed: More evotree edge cases have been resolved since the last update.
 - - Fixed: Gen4 Move Tutor now permits correctly for alternate forms.
 - - Fixed: Gen2 Union Cave B2F fishing slots are now recognized correctly.
 - - Fixed: Gen1/2 SID check no longer indicates "Fishy" when SID is correctly zero.