@@ -1,6 +1,6 @@
 <Project>
   <PropertyGroup>
-    <Version>23.09.25</Version>
+    <Version>23.10.11</Version>
     <LangVersion>11</LangVersion>
     <Nullable>enable</Nullable>
     <NeutralLanguage>en</NeutralLanguage>
