@@ -75,6 +75,7 @@ internal static class Encounters8a
         new(201,027,25,U) { Location = 006, Method = Fixed }, // Unown ?
 
         // Future updates will handle crossovers better.
+        new(201,002,25,U) { Location = 010, Method = Fixed }, // Unown C (Coronet Highlands)
         new(201,017,25,U) { Location = 009, Method = Fixed }, // Unown R (Cobalt Coastlands)
         new(201,026,25,U) { Location = 099, Method = Fixed }, // Unown ! (Arena’s Approach)
         new(201,026,25,U) { Location = 141, Method = Fixed }, // Unown ! (Icepeak Arena)
